[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/BitButtonDisabled.png" type="Texture" id=1]
[ext_resource path="res://Assets/BitButtonNorm.png" type="Texture" id=2]
[ext_resource path="res://Assets/BitButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://BitButtons.gd" type="Script" id=4]

[node name="BitButtons" type="GridContainer"]
margin_right = 320.0
margin_bottom = 320.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit1" type="TextureButton" parent="."]
margin_right = 100.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit2" type="TextureButton" parent="."]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit3" type="TextureButton" parent="."]
margin_left = 220.0
margin_right = 320.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit4" type="TextureButton" parent="."]
margin_top = 110.0
margin_right = 100.0
margin_bottom = 210.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="TextureRect" parent="."]
margin_left = 110.0
margin_top = 110.0
margin_right = 210.0
margin_bottom = 210.0
texture = ExtResource( 1 )

[node name="Bit5" type="TextureButton" parent="."]
margin_left = 220.0
margin_top = 110.0
margin_right = 320.0
margin_bottom = 210.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit6" type="TextureButton" parent="."]
margin_top = 220.0
margin_right = 100.0
margin_bottom = 320.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit7" type="TextureButton" parent="."]
margin_left = 110.0
margin_top = 220.0
margin_right = 210.0
margin_bottom = 320.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bit8" type="TextureButton" parent="."]
margin_left = 220.0
margin_top = 220.0
margin_right = 320.0
margin_bottom = 320.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Bit1" to="." method="_on_Bit1_toggled"]
[connection signal="toggled" from="Bit2" to="." method="_on_Bit2_toggled"]
[connection signal="toggled" from="Bit3" to="." method="_on_Bit3_toggled"]
[connection signal="toggled" from="Bit4" to="." method="_on_Bit4_toggled"]
[connection signal="toggled" from="Bit5" to="." method="_on_Bit5_toggled"]
[connection signal="toggled" from="Bit6" to="." method="_on_Bit6_toggled"]
[connection signal="toggled" from="Bit7" to="." method="_on_Bit7_toggled"]
[connection signal="toggled" from="Bit8" to="." method="_on_Bit8_toggled"]
